--- a/index.html
+++ b/index.html
@@ -1,114 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lesson Cards</title>
     <!-- Include Tailwind CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <style>
-        .lock-icon {
-            font-size: 24px;
-        }
+      .lock-icon {
+        font-size: 24px;
+      }
 
-        .lesson-card {
-            padding: 20px;
-            color: #d1631a;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            background: url(https://media.istockphoto.com/id/1226927264/vector/girl-on-stack-of-books-talking-to-megaphone-with-language-doodle.jpg?s=612x612&w=0&k=20&c=3mOcnWqWcMRyz61QucJRSUfyUfw5L1Dhy_f3GD_HhQ8=);
-            background-size: cover;
-        }
+      .lesson-card {
+        padding: 20px;
+        color: #504b48;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        background-size: cover;
+        background-color: aliceblue;
+      }
 
-        body {
-            background: #C9AF8E url(https://prod-cloud.uniteforliteracy.com/images/wood.jpg?v=51227543t3) repeat;
-        }
+      body {
+        background: #c9af8e
+          url(https://prod-cloud.uniteforliteracy.com/images/wood.jpg?v=51227543t3)
+          repeat;
+      }
 
-        .popup-container {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            z-index: 9999;
-            width: 100%; /* Set width to cover 80% of the screen */
-            max-width: 90vw; /* Limit maximum width for larger screens */
-            height: 90vh;
-        }
+      .popup-container {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        z-index: 9999;
+        width: 100%; /* Set width to cover 80% of the screen */
+        max-width: 90vw; /* Limit maximum width for larger screens */
+        height: 90vh;
+      }
     </style>
-</head>
+  </head>
 
-<body class="bg-gray-100">
+  <body class="bg-gray-100">
     <div class="container mx-auto py-8 px-4">
-        <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">Unlock Your Lessons</h1>
-       
+      <h1 class="text-4xl font-bold text-center text-gray-800 mb-8">
+        Your Lessons
+      </h1>
     </div>
-    <div class="container mx-auto py-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-8"
-        id="lessonContainer">
-    </div>
+    <div
+      class="container mx-auto py-8 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-8 p-4"
+      id="lessonContainer"
+    ></div>
     <div class="popup-container" id="lessonPopup">
-        <button id="closePopup"
-            class="absolute top-0 right-0 p-2 m-4 text-gray-500 hover:text-gray-800 focus:outline-none">X</button>
-        <iframe src="" frameborder="10" width="100%" height="100%"></iframe>
+      <button
+        id="closePopup"
+        class="absolute top-0 right-0 p-2 m-4 text-gray-500 hover:text-gray-800 focus:outline-none"
+      >
+        X
+      </button>
+      <iframe src="" frameborder="10" width="100%" height="100%"></iframe>
     </div>
     <!-- Generating 30 lesson cards -->
     <!-- For simplicity, I'm starting with all lessons locked -->
     <script>
-        function showLessonPopup(lessonNumber) {
-            const popup = document.getElementById('lessonPopup');
-            const iframe = popup.querySelector('iframe');
-            iframe.src = `https://www.uniteforliteracy.com/unite/new/book?BookId=167`; // Replace 'lessonX.html' with the actual URL of the lesson content
-            popup.style.display = 'block';
-        }
-          document.getElementById('closePopup').addEventListener('click', function() {
-            document.getElementById('lessonPopup').style.display = 'none';
-          });
-        // Function to generate lesson cards
-        function generateLessonCard(number, locked) { // add link for each number with array links[number]
-            const statusClass = locked ? 'text-red-500' : 'text-green-500';
-            const lockClick=locked?'pointer-events-none ':""
-            const lockIcon = locked ? '🔒' : '🔓';
-            return `
-        <div class="lesson-card ${lockClick} rounded-lg shadow-lg" onclick="showLessonPopup(${number})">
+      let linkList = [
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=167",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=1469",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=2157",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=1259",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=2243",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=1272",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=1285",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=225",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=235",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=1551",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=57",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=120",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=238",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=184",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=79",
+        "https://www.uniteforliteracy.com/unite/new/book?BookId=2701",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=249",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=1255",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=11",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=34",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=2129",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=139",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=1282",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=1728",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=25",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=2237",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=1279",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=1262",
+        "https://www.uniteforliteracy.com/unite/allanimals/book?BookId=1288",
+        "https://www.uniteforliteracy.com/unite/celebrations/book?BookId=1407",
+        "https://www.uniteforliteracy.com/unite/celebrations/book?BookId=1307",
+      ];
+      function showLessonPopup(lessonNumber, link) {
+        const popup = document.getElementById("lessonPopup");
+        const iframe = popup.querySelector("iframe");
+        iframe.src = link; // Replace 'lessonX.html' with the actual URL of the lesson content
+        popup.style.display = "block";
+      }
+      document
+        .getElementById("closePopup")
+        .addEventListener("click", function () {
+          document.getElementById("lessonPopup").style.display = "none";
+        });
+      // Function to generate lesson cards
+      function generateLessonCard(number, locked) {
+        // add link for each number with array links[number]
+        const statusClass = locked ? "text-red-500" : "text-green-500";
+        const lockClick = locked ? "pointer-events-none" : "";
+        const lockHide = locked ? "opacity-50" : "";
+
+        const lockIcon = locked ? "🔒" : "🔓";
+        let link = linkList[number];
+        return `
+        <div class="lesson-card ${lockClick} ${lockHide}   rounded-lg shadow-lg" onclick="showLessonPopup(${number},'${link}')">
           <div class="p-4">
             <h3 class="text-xl font-semibold mb-2">Lesson ${number}</h3>
             <div class="flex items-center justify-center ${statusClass}">
               <span class="lock-icon">${lockIcon}</span>
-              <p class="ml-2">${locked ? 'Locked' : 'Unlocked'}</p>
+              <p class="ml-2">${locked ? "Locked" : "Unlocked"}</p>
             </div>
           </div>
         </div>
       `;
+      }
+      const dateDiff = (dateInput) => {
+        const now = new Date();
+        // Define the start date (you can set this to any date you want)
+        const startDate = new Date(dateInput);
+        // Calculate the difference in milliseconds between the two dates
+        const timeDifference = now.getTime() - startDate.getTime();
+        // Convert the time difference to days
+        const daysDifference = timeDifference / (1000 * 3600 * 24);
+        return Math.round(daysDifference);
+      };
+      let unlockedDate = dateDiff("2024-02-21");
+      // Unlock lessons sequentially every 5 seconds
+      window.onload = function () {
+        const lessonContainer = document.getElementById("lessonContainer");
+        for (let i = 1; i <= unlockedDate; i++) {
+          // Lock all lessons initially
+          lessonContainer.innerHTML += generateLessonCard(i, false);
         }
-
-        // Unlock lessons sequentially every 5 seconds
-        window.onload = function () {
-            const lessonContainer = document.getElementById('lessonContainer');
-            for (let i = 1; i <= 30; i++) {
-                // Lock all lessons initially
-                lessonContainer.innerHTML += generateLessonCard(i, true);
-            }
-
-            let index = 0;
-            const lessonCards = lessonContainer.querySelectorAll('.lesson-card');
-            const intervalId = setInterval(function () {
-                if (index >= lessonCards.length) {
-                    clearInterval(intervalId); // Stop the interval when all lessons are unlocked
-                    return;
-                }
-                // Unlock the next lesson
-                lessonCards[index].outerHTML = generateLessonCard(index + 1, false);
-                index++;
-            }, 5000); // Unlock each lesson every 5 seconds
-        };
-
-
+        for (let i = unlockedDate + 1; i <= 30; i++) {
+          // Lock all lessons initially
+          lessonContainer.innerHTML += generateLessonCard(i, true);
+        }
+      };
     </script>
-</body>
-
+  </body>
 </html>
